--- a/min-caml-new/Makefile
+++ b/min-caml-new/Makefile
@@ -11,8 +11,10 @@ clean:: nobackup
 
 SOURCES = float.c type.ml id.ml miniMap.ml miniSet.ml \
 syntax.ml parser.mly lexer.mll typing.mli typing.ml kNormal.mli kNormal.ml \
+alpha.mli alpha.ml beta.mli beta.ml assoc.mli assoc.ml \
+inline.mli inline.ml constFold.mli constFold.ml elim.mli elim.ml \
 closure.mli closure.ml asm.mli asm.ml virtual.mli virtual.ml \
-regAlloc.mli regAlloc.ml emit.mli emit.ml \
+simm.mli simm.ml regAlloc.mli regAlloc.ml emit.mli emit.ml \
 main.mli main.ml
 
 include OCamlMakefile
