--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@
 
 # Binary
 *.o
+min-caml
+min-caml.top
+
+# Compiled
+lexer.ml
+parser.ml
+parser.mli
 
 # Symlink to Architecture-Specific Files
 min_caml_origin/asm.ml
